force-app/main/default/objects/cgcloud__Account_Sales_Data__c/cgcloud__Account_Sales_Data__c.object-meta.xml
<CustomObject>
    <description>Holds the information of the sales of a customer for 2 consecutive years. Access of the object provided to the System Admin.</description>
    <label>Customer Sales Data</label>
    <nameField>
        <displayFormat>CSD-{0000}</displayFormat>
        <label>Customer Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sales Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>