force-app/main/default/objects/cgcloud__Account_Sales_Data__c/fields/cgcloud__Month__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Month__c</fullName>
    <description>Month the sales data is for.</description>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>