force-app/main/default/objects/cgcloud__Account_Sales_Data__c/fields/cgcloud__Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Volume__c</fullName>
    <description>Sales Volume.</description>
    <label>Sales Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>