force-app/main/default/objects/cgcloud__Account_Sales_Data__c/fields/cgcloud__Year__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Year__c</fullName>
    <description>Year the sales data is for.</description>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>