force-app/main/default/objects/cgcloud__Account_Sales_Data__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Month__c</columns>
    <columns>cgcloud__Year__c</columns>
    <columns>cgcloud__Sales_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>